After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 664476 - Wizard forgets user choice of fixed PIN if no changes are made in dialog
Wizard forgets user choice of fixed PIN if no changes are made in dialog
Status: RESOLVED FIXED
Product: gnome-bluetooth
Classification: Core
Component: wizard
3.2.x
Other Linux
: Normal normal
: ---
Assigned To: gnome-bluetooth-general-maint@gnome.bugs
gnome-bluetooth-general-maint@gnome.bugs
Depends on:
Blocks:
 
 
Reported: 2011-11-21 14:25 UTC by Daniele Forsi
Modified: 2011-11-21 15:50 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Do not overwrite user_pincode when setting up the PIN dialog (2.10 KB, patch)
2011-11-21 14:25 UTC, Daniele Forsi
committed Details | Review

Description Daniele Forsi 2011-11-21 14:25:54 UTC
Created attachment 201818 [details] [review]
Do not overwrite user_pincode when setting up the PIN dialog

Steps to reproduce:
1. open PIN options dialog
2. select an option other than "Automatic PIN selection"
3. close the dialog
4. open PIN options dialog again
5. choice made at step 2 is shown as expected
6. close the dialog without changing anything
7. open PIN options dialog for the third time
8. Automatic PIN is selected instead of option shown at steps 2 and 5
Comment 1 Daniele Forsi 2011-11-21 14:30:42 UTC
Review of attachment 201818 [details] [review]:

This patch removes the old_pincode logic because the dialog is instant apply; it also doesn't free user_pincode because it is done if needed by set_user_pincode(); finally it adds support for the "Do not pair option".