wizard: fix PIN dialog not remembering user choice of fixed PIN

User choice wasn't correctly remembered if the user opened the
dialog and did not make any change (in that case the wizard acted
as if the "Automatic PIN selection" choice was selected).

https://bugzilla.gnome.org/show_bug.cgi?id=664476